@@ -9,7 +9,7 @@ Index: python-django-1.2.3/tests/modeltests/validation/tests.py
 ===================================================================
 --- python-django-1.2.3.orig/tests/modeltests/validation/tests.py	2010-10-23 14:59:12.447389830 +0200
 +++ python-django-1.2.3/tests/modeltests/validation/tests.py	2010-10-23 15:01:01.875390381 +0200
-@@ -52,14 +52,6 @@
+@@ -53,26 +53,6 @@
          mtv = ModelToValidate(number=10, name='Some Name', url='not a url')
          self.assertFieldFailsValidationWithMessage(mtv.full_clean, 'url', [u'Enter a valid value.'])
  
@@ -21,6 +21,18 @@ Index: python-django-1.2.3/tests/modeltests/validation/tests.py
 -        mtv = ModelToValidate(number=10, name='Some Name', url='http://www.djangoproject.com/')
 -        self.assertEqual(None, mtv.full_clean()) # This will fail if there's no Internet connection
 -
-     def test_text_greater_that_charfields_max_length_eaises_erros(self):
+-    def test_correct_https_url_but_nonexisting(self):
+-        mtv = ModelToValidate(number=10, name='Some Name', url='https://www.djangoproject.com/')
+-        self.assertFieldFailsValidationWithMessage(mtv.full_clean, 'url', [u'This URL appears to be a broken link.'])
+-
+-    def test_correct_ftp_url_but_nonexisting(self):
+-        mtv = ModelToValidate(number=10, name='Some Name', url='ftp://ftp.google.com/we-love-microsoft.html')
+-        self.assertFieldFailsValidationWithMessage(mtv.full_clean, 'url', [u'This URL appears to be a broken link.'])
+-
+-    def test_correct_ftps_url_but_nonexisting(self):
+-        mtv = ModelToValidate(number=10, name='Some Name', url='ftps://ftp.google.com/we-love-microsoft.html')
+-        self.assertFieldFailsValidationWithMessage(mtv.full_clean, 'url', [u'This URL appears to be a broken link.'])
+-
+     def test_text_greater_that_charfields_max_length_raises_erros(self):
          mtv = ModelToValidate(number=10, name='Some Name'*100)
          self.assertFailsValidation(mtv.full_clean, ['name',])
